--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@ __pycache__/
 
 # My ignore
 .pytest_cache/
-allure-report/
+allure-re
+port/
 .DS_Store
 .idea/
 videos/
-report/
+.tests\.pytest_cache\
+.tests\.pytest_cache\
+videos
 
 # C extensions
 *.so
@@ -166,3 +169,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/tests/trace.zip
