--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r local-requirements.txt
+        pip install -r requirements.txt
     - name: Lint
       run: pre-commit run --show-diff-on-failure --color=always --all-files
   build:
@@ -36,7 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r local-requirements.txt
+        pip install -r requirements.txt
         pip install -e .
         python -m playwright install
         python -m playwright install-deps
