--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Lint
-      run: pre-commit run --show-diff-on-failure --color=always --all-files
+      run: pytest
   build:
     timeout-minutes: 30
     strategy:
