--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,21 +28,16 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -e .
-        python -m playwright install
-        python -m playwright install-deps
-    - name: Test
-      if: ${{ matrix.os != 'ubuntu-latest' }}
-      run: pytest --cov=pytest_playwright --cov-report xml
-    - name: Test on Linux
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      run: xvfb-run pytest --cov=pytest_playwright --cov-report xml
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install playwright
+          pip install -e .
+      - name: Ensure browsers are installed
+        run: python -m playwright install --with-deps
+      - name: Run your tests
+        run: pytest
