--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,7 +37,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          python3 -m pytest -v --browser chromium --template=html1/index.html --report=output/test/test-report.html --variables properties/auto-test-env.yml
+          python3 -m pytest -v --browser chromium l
       - name: Create artifacts
         uses: actions/upload-artifact@v3
         with:
