--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,19 +28,8 @@ jobs:
 
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Ensure Playwright browsers are installed
-        run: python -m playwright install chromium
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        run: python -m playwright install chromium  
       - name: Test with pytest
         run: |
-          python3 -m pytest -v --browser chromium l
-      - name: Create artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-report-1
-          path: output/test/test-report.html
-          retention-days: 5
+          python3 -m pytest -v --browser chromium
+ 
