--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,4 +32,11 @@ jobs:
       - name: Test with pytest
         run: |
           python3 -m pytest -v --browser chromium --alluredir=my_allure_results
+     
+      - name: Create artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report-1
+          path: my_allure_results
+          retention-days: 5
  
