--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -34,8 +34,9 @@ jobs:
       - name: Test with pytest
         run: |
           python3 -m pytest -v --browser chromium --alluredir=my_allure_results
-     
+
       - name: Create artifacts
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: test-report-1
