--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -42,4 +42,13 @@ jobs:
           name: test-report-1
           path: my_allure_results
           retention-days: 5
+      - name: Deploy report
+     
+        uses: JamesIves/github-pages-deploy-action@3.1.0
+        if: always()
+        with:
+         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+         BRANCH: master # The branch the action should deploy to.
+         FOLDER: my_allure_results # The folder the action should deploy.
+         TARGET_FOLDER: docs
  
