--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ pytest~=7.0.1
 Faker~=13.11.1
 allure-pytest
 pytest-xdist==2.1.0
+pytest-rerunfailures==10.2
 requests==2.24.0
-playwright~=1.26.1
+playwright~=1.27.1
+pip install pytest-rerunfailures
