--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,8 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-#   schedule:
-#     - cron: '*/60 * * * *'
+  schedule:
+    - cron: '00 23 * * *
 
 permissions:
   contents: read
