--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '00 23 * * *
+    - cron: '00 23 * * *'
 
 permissions:
   contents: read
