--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -49,7 +49,7 @@ jobs:
         if: always()
         with:
          ACCESS_TOKEN: ${{ secrets.ALLURE }}
-         BRANCH: master # The branch the action should deploy to.
+         BRANCH: main # The branch the action should deploy to.
          FOLDER: my_allure_results # The folder the action should deploy.
          TARGET_FOLDER: docs
  
