--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,11 +30,36 @@ jobs:
 
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Ensure Playwright browsers are installed
-        run: python -m playwright install chromium  
-      
+        run: python -m playwright install chromium
+
       - name: Test with pytest
         run: |
           python3 -m pytest -v --reruns 2 --browser chromium --alluredir=my_allure_results
 
+      - uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
 
- 
+      - uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: build/allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+          
+      - uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
+
+
+
+
+
+
