--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,11 +21,11 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Ensure Playwright browsers are installed
-        run: python -m playwright install chromium
+        run: python -m playwright install --with-deps
 
       - name: Test with pytest
         run: |
-          python3 -m pytest -v --reruns 2 --browser chromium --alluredir=allure_results
+          python3 -m pytest -v --reruns 2 --alluredir=allure_results
 
       - name: Get Allure history
         uses: actions/checkout@v2
