--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Test with pytest
         run: |
-          python3 -m pytest -v --reruns 2 --alluredir=allure_results
+          python3 -m pytest -v --browser chromium --browser webkit --browser firefox  --reruns 2 --alluredir=allure_results
 
       - name: Get Allure history
         uses: actions/checkout@v2
